@@ -8,6 +8,11 @@
 
 2012-05-20  Bastian Maerkisch  <bmaerkisch@web.de>
 
+	* src/win/wcommon.h src/win/wgnuplib.h src/win/wgraph.c: Remove limit
+	on number of plots which can be toggled on/off via key entries.
+	Maximum number of toolbar buttons still restricted to MAXPLOTSHIDE.
+	Bug #3516417
+
 	* demo/image2.dem: Meaning of "set [xyz]range reverse" changed.
 
 	* term/win.trm (WIN_options, WIN_set_color) src/win/wgraph.c
